--- a/source/index-ua.html
+++ b/source/index-ua.html
@@ -79,7 +79,7 @@
                     </p>
                     <input class="contact-form__input" v-model="clientName" type="text" name="name" id="name" placeholder="Ваше ім'я">
                     <input class="contact-form__input" v-model="clientPhoneNumber" type="tel" name="tel" id="tel" placeholder="Телефон" required>
-                    <button class="contact-form__submit-button button-blue" :class="{ 'contact-form__submit-button--success': formHasBeenSent, 'contact-form__submit-button--error': formHasNotBeenSent }" type="submit">{{ !formHasBeenSent && !formHasNotBeenSent ? 'Оставить заявку' : formHasBeenSent ? 'Успешно отправлено' : formHasNotBeenSent ? 'Не отправлено' : '' }}</button>
+                    <button class="contact-form__submit-button button-blue" :class="{ 'contact-form__submit-button--success': formHasBeenSent, 'contact-form__submit-button--error': formHasNotBeenSent }" type="submit">{{ !formHasBeenSent && !formHasNotBeenSent ? 'Залишити заявку' : formHasBeenSent ? 'Успішно відправлено' : formHasNotBeenSent ? 'Не відправлено' : '' }}</button>
                     <p class="contact-form__confidence-policy confidence-policy">
                         Натискаючи на кнопку, ви погоджуєтеся <br> із <a href="#" class="confidence-policy__link">Політикою конфіденційності</a>
                     </p>
@@ -472,7 +472,7 @@
                     <input class="contact-form__input" v-model="clientPhoneNumber" type="tel" name="tel" id="full-form-tel" placeholder="Телефон" required>
                     <input class="contact-form__input" v-model="clientEmail" type="email" name="email" id="full-form-email" placeholder="E-mail">
                     <textarea class="contact-form__input" v-model="clientMessage" name="message" id="full-form-message" cols="25" rows="1" placeholder="Ваше повідомлення"></textarea>
-                    <button class="contact-form__submit-button button-blue" :class="{ 'contact-form__submit-button--success': formHasBeenSent, 'contact-form__submit-button--error': formHasNotBeenSent }" type="submit">{{ !formHasBeenSent && !formHasNotBeenSent ? 'Оставить заявку' : formHasBeenSent ? 'Успешно отправлено' : formHasNotBeenSent ? 'Не отправлено' : '' }}</button>
+                    <button class="contact-form__submit-button button-blue" :class="{ 'contact-form__submit-button--success': formHasBeenSent, 'contact-form__submit-button--error': formHasNotBeenSent }" type="submit">{{ !formHasBeenSent && !formHasNotBeenSent ? 'Залишити заявку' : formHasBeenSent ? 'Успішно відправлено' : formHasNotBeenSent ? 'Не відправлено' : '' }}</button>
                     <p class="contact-form__confidence-policy confidence-policy">
                         Натискаючи на кнопку, ви погоджуєтеся з <a href="#" class="confidence-policy__link">Політикою конфіденційності</a>
                     </p>
