--- a/source/index.html
+++ b/source/index.html
@@ -40,6 +40,14 @@
                     <li class="nav__item">
                         <a href="#about" class="nav__link" @click="toggleMobileMenu">О компании</a>
                     </li>
+                    <li class="nav__item">
+                        <span class="visually-hidden">Язык</span>
+                        <select href="#about" class="nav__link nav__link--language">
+                            <option value="ru" selected>RU</option>
+                            <option value="ua">UA</option>
+                            <option value="en">EN</option>
+                        </select>
+                    </li>
                 </ul>
                 <div class="owner-info">
                     <div class="owner-info__avatar">
