--- a/source/index-en.html
+++ b/source/index-en.html
@@ -42,7 +42,7 @@
                     </li>
                     <li class="nav__item">
                         <span class="visually-hidden">Language</span>
-                        <select href="#about" class="nav__link nav__link--language">
+                        <select href="#about" class="nav__link nav__link--language" @change="setLanguage">
                             <option value="ru">RU</option>
                             <option value="ua">UA</option>
                             <option value="en" selected>EN</option>
