--- a/source/index.html
+++ b/source/index.html
@@ -42,7 +42,7 @@
                     </li>
                     <li class="nav__item">
                         <span class="visually-hidden">Язык</span>
-                        <select href="#about" class="nav__link nav__link--language">
+                        <select href="#about" class="nav__link nav__link--language" @change="setLanguage">
                             <option value="ru" selected>RU</option>
                             <option value="ua">UA</option>
                             <option value="en">EN</option>
