--- a/source/index-en.html
+++ b/source/index-en.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Базис-КР</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="https://unpkg.com/vue@3.0.5"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/vue.prod.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
 </head>
 <body id="app">
     <header id="navigation" class="header">
@@ -60,11 +60,11 @@
                         <p class="owner-info__name">Pavlo Tsidulia</p>
                         <p class="owner-info__phone">
                             <span class="owner-info__post">Director</span>
-                            <a href="tel:+380966185013" class="owner-info__phone-link">
+                            <a href="tel:+380664313867" class="owner-info__phone-link">
                                 <svg class="owner-info__phone-icn" width="16" height="16">
                                     <use xlink:href="img/sprite.svg#icn_Frame-2"></use>
                                 </svg>
-                                +38 096 618 50 13
+                                +38 066 431 38 67
                             </a>
                         </p>
                     </div>
@@ -433,10 +433,6 @@
                     </div>
                     <ul class="reviews__list swiper-wrapper">
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность. Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. </blockquote>
-                            <cite class="reviews__author">Administration of school No. 58</cite>
-                        </li>
-                        <li class="reviews__item swiper-slide">
                             <blockquote class="reviews__review">MAKTOP LLC cooperated with BASIS-KR LLC
                                 in the performance of works on the development of design documentation (stage
                                 "Working project") "Construction of a commercial and office building and garage
@@ -449,12 +445,20 @@
                             <cite class="reviews__author">M. Zemlyak, Director of MAKTOP LLC</cite>
                         </li>
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность. Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. </blockquote>
-                            <cite class="reviews__author">Администрация школы №58</cite>
+                            <blockquote class="reviews__review">Municipal enterprise "VINNITSA REGIONAL CLINICAL HOSPITAL named after MI Pirogov "and LLC" BASIS-KR "
+                                concluded an agreement on the development of project documentation
+                                "Reconstruction of the power supply system with the installation of a diesel power plant as a source
+                                power supply of buildings №5, №14, №15, №16 of the object - Vinnytsia Regional Clinical Hospital named after MI Pirogov "
+                                The work was performed qualitatively, professionally and at the appropriate level. Terms of performance of works were
+                                The executor complied with the terms of the contract.
+                                There are no comments from the customer on the quality and timing of work under the contract.</blockquote>
+                            <cite class="reviews__author">Director, O. Zhupanov</cite>
                         </li>
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность. Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. </blockquote>
-                            <cite class="reviews__author">Администрация школы №58</cite>
+                            <blockquote class="reviews__review">
+                                <img src="img/photo_2021-02-20_16-37-08.jpg" alt="Подячна грамота">
+                            </blockquote>
+                            <cite class="reviews__author">Chairman of the Saksagan District Council of the city of Kryvyi Rih, V. Bezzubchenko</cite>
                         </li>
                     </ul>
                 </div>
