--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Базис-КР</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="https://unpkg.com/vue@3.0.5"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/vue.prod.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
 </head>
 <body id="app">
     <header id="navigation" class="header">
@@ -60,11 +60,11 @@
                         <p class="owner-info__name">Цидуля Павел Александрович</p>
                         <p class="owner-info__phone">
                             <span class="owner-info__post">Директор</span>
-                            <a href="tel:+380966185013" class="owner-info__phone-link">
+                            <a href="tel:+380664313867" class="owner-info__phone-link">
                                 <svg class="owner-info__phone-icn" width="16" height="16">
                                     <use xlink:href="img/sprite.svg#icn_Frame-2"></use>
                                 </svg>
-                                +38 096 618 50 13
+                                +38 066 431 38 67
                             </a>
                         </p>
                     </div>
@@ -432,10 +432,6 @@
                     </div>
                     <ul class="reviews__list swiper-wrapper">
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность. Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. </blockquote>
-                            <cite class="reviews__author">Администрация школы №58</cite>
-                        </li>
-                        <li class="reviews__item swiper-slide">
                             <blockquote class="reviews__review">ООО «МАКТОП» сотрудничало с ООО «БАЗИС-КР»
                                 выполнение работ на разработку проектной документации (стадия
                                 «Рабочий проект») «Строительство торгово-офисного здания и гаража
@@ -448,12 +444,20 @@
                             <cite class="reviews__author">М. Земляк Директор ООО «МАКТОП»</cite>
                         </li>
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность. Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. </blockquote>
-                            <cite class="reviews__author">Администрация школы №58</cite>
+                            <blockquote class="reviews__review">Коммунальное предприятие «ОБЛАСТНАЯ БОЛЬНИЦА им. Пирогова »и ООО« БАЗИС-КР »
+                                заключили договор о разработке проектной документации
+                                "Реконструкция системы электроснабжения по установке дизель-электростанции, как источники
+                                го питания корпусов №5, №14, №15, №16 объекта - Винницкая областная клиническая больница им. Пирогова "
+                                Работы были выполнены качественно, профессионально и на должном уровне. Сроки выполнения работ были
+                                Исполнителем соблюдены в соответствии с условиями договора.
+                                Замечаний от заказчика по качеству и срокам выполнения работ по договору нет. </blockquote>
+                            <cite class="reviews__author">Директо, О.Б. Жупанов</cite>
                         </li>
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность. Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. </blockquote>
-                            <cite class="reviews__author">Администрация школы №58</cite>
+                            <blockquote class="reviews__review">
+                                <img src="img/photo_2021-02-20_16-37-08.jpg" alt="Подячна грамота">
+                            </blockquote>
+                            <cite class="reviews__author">Глава Саксаганскоког районного совета города Кривой Рог, В. Беззубченко</cite>
                         </li>
                     </ul>
                 </div>
