--- a/source/index-ua.html
+++ b/source/index-ua.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Базис-КР</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="https://unpkg.com/vue@3.0.5"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/vue.prod.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
 </head>
 <body id="app">
     <header id="navigation" class="header">
@@ -60,11 +60,11 @@
                         <p class="owner-info__name">Цидуля Павло Олександрович</p>
                         <p class="owner-info__phone">
                             <span class="owner-info__post">Директор</span>
-                            <a href="tel:+380966185013" class="owner-info__phone-link">
+                            <a href="tel:+380664313867" class="owner-info__phone-link">
                                 <svg class="owner-info__phone-icn" width="16" height="16">
                                     <use xlink:href="img/sprite.svg#icn_Frame-2"></use>
                                 </svg>
-                                +38 096 618 50 13
+                                +38 066 431 38 67
                             </a>
                         </p>
                     </div>
@@ -432,10 +432,6 @@
                     </div>
                     <ul class="reviews__list swiper-wrapper">
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Цього правила дотримуємося в своїй роботі і по сей день: робимо ексклюзивні проекти, які поєднують в собі красу і функціональність. Можливо, це не скромно, але проекти такого ж високої якості, як ми, роблять тільки одиниці. І кожен наш клієнт, партнер або конкурент підтвердить, що скрупульозність до кожного елементу і старанність - візитна картка Базис-КР.</blockquote>
-                            <cite class="reviews__author">Адміністрація школи №58</cite>
-                        </li>
-                        <li class="reviews__item swiper-slide">
                             <blockquote class="reviews__review">ТОВ «МАКТОП» співпрацювало з ТОВ «БАЗИС-КР» 
                                 у виконанні робіт на розробку проектної документації (стадія 
                                 «Робочий проект») «Будівництво торгово-офісної будівлі та гаражу 
@@ -448,12 +444,21 @@
                             <cite class="reviews__author">М. Земляк Директор ТОВ «МАКТОП»</cite>
                         </li>
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Цього правила дотримуємося в своїй роботі і по сей день: робимо ексклюзивні проекти, які поєднують в собі красу і функціональність. Можливо, це не скромно, але проекти такого ж високої якості, як ми, роблять тільки одиниці. І кожен наш клієнт, партнер або конкурент підтвердить, що скрупульозність до кожного елементу і старанність - візитна картка Базис-КР.</blockquote>
-                            <cite class="reviews__author">Адміністрація школи №58</cite>
+                            <blockquote class="reviews__review">
+                                Комунальне підприємство «ВІННИЦЬКА ОБЛАСНА КЛІНІЧНА ЛІКАРНЯ ім. М.І.Пирогова» та ТОВ «БАЗИС-КР»
+                                уклали договір про розробку проектної документації
+                                "Реконструкція системи електропостачання з встановлення дизель-електростанції, як джерела 
+                                го живлення корпусів №5, №14, №15, №16 об’єкту – Вінницька обласна клінічна лікарня ім. М.І.Пирогова"
+                                Роботи були виконані якісно, професійно і на належному рівні. Строки виконання робіт були 
+                                Виконавцем додержані відповідно до умов договору. 
+                                Зауважень від замовника щодо якості та строків виконання робіт по договору немає.</blockquote>
+                            <cite class="reviews__author">Директо, О.Б. Жупанов</cite>
                         </li>
                         <li class="reviews__item swiper-slide">
-                            <blockquote class="reviews__review">Цього правила дотримуємося в своїй роботі і по сей день: робимо ексклюзивні проекти, які поєднують в собі красу і функціональність. Можливо, це не скромно, але проекти такого ж високої якості, як ми, роблять тільки одиниці. І кожен наш клієнт, партнер або конкурент підтвердить, що скрупульозність до кожного елементу і старанність - візитна картка Базис-КР.</blockquote>
-                            <cite class="reviews__author">Адміністрація школи №58</cite>
+                            <blockquote class="reviews__review">
+                                <img src="img/photo_2021-02-20_16-37-08.jpg" alt="Подячна грамота">
+                            </blockquote>
+                            <cite class="reviews__author">Голова Саксаганської районної ради міста Кривий Ріг, В. Беззубченко</cite>
                         </li>
                     </ul>
                 </div>
