layout and color fixes

--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <title>Базис-КР</title>
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/vue.prod.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/swiper.min.js"></script>
 </head>
 <body id="app">
     <header id="navigation" class="header">
