--- a/source/index.html
+++ b/source/index.html
@@ -435,7 +435,7 @@
                     <ul class="reviews__list swiper-wrapper">
                         <li class="reviews__item swiper-slide">
                             <blockquote class="reviews__review">ООО «МАКТОП» сотрудничало с ООО «БАЗИС-КР»
-                                выполнение работ на разработку проектной документации (стадия
+                                по разработке проектной документации (стадия
                                 «Рабочий проект») «Строительство торгово-офисного здания и гаража
                                 со встроенными бытовыми помещениями ».
                                 В результате работа была выполнена профессионально и в
