added animated numbers

--- a/source/index-en.html
+++ b/source/index-en.html
@@ -406,7 +406,7 @@
                         <p class="results__paragraph">Cooperation with us is a simple and effective way to create project documentation of any complexity. The ability to use modern developments in software, create projects in 3D.</p>
                         <p class="results__paragraph">By contacting us, you relieve yourself of all the problems associated with design and approval. We also provide proper support during construction. We accompany the project at all stages in order to avoid surprises in the future.</p> 
                     </div>
-                    <ul class="results__list">
+                    <ul ref="numbers" class="results__list">
                         <li class="results__item">
                             <span class="results__number">256</span> projects    
                         </li>
