--- a/source/index-ua.html
+++ b/source/index-ua.html
@@ -405,7 +405,7 @@
                         <p class="results__paragraph">Співпраця з нами - простий і ефективний спосіб створення проектної документації будь-якої складності. Можливість використовувати современине розробки в програмному забезпеченні, створювати проекти у форматі 3D.</p>
                         <p class="results__paragraph">Звернувшись до нас, ви знімаєте з себе всі проблеми, пов'язані з проектуванням і узгодженням. Також ми забезпечуємо належну підтримку під час будівництва. Супроводжуємо проект на всіх стадіях, щоб уникнути сюрпризів в перспективі.</p> 
                     </div>
-                    <ul class="results__list">
+                    <ul ref="numbers" class="results__list">
                         <li class="results__item">
                             <span class="results__number">256</span> проектів    
                         </li>
