--- a/source/index.html
+++ b/source/index.html
@@ -405,7 +405,7 @@
                         <p class="results__paragraph">Сотрудничество с нами - простой и эффективный способ создания проектной документации любой сложности. Возможность использовать современыне разработки в программном обеспечении, создавать проекты в формате 3D.</p>
                         <p class="results__paragraph">Обратившись к нам, вы снимаете с себя все проблемы, связанные с проектированием и согласованием. Также мы обеспечиваем должную поддержку во время строительства. Сопровождаем проект на всех стадиях, дабы избежать сюрпризов в перспективе.</p> 
                     </div>
-                    <ul class="results__list">
+                    <ul ref="numbers" class="results__list">
                         <li class="results__item">
                             <span class="results__number">256</span> проектов    
                         </li>
