removed confodence policy

--- a/source/index-en.html
+++ b/source/index-en.html
@@ -476,7 +476,7 @@
                 <div class="contact-popup__tel-block tel-block">
                     <p class="tel-block__title">Contact us</p>
                     <span class="tel-block__label">Phone</span>
-                    <a class="tel-block__link" href="tel:380966185013">+38 096 618 50 13</a>
+                    <a class="tel-block__link" href="tel:+380664313867"> +38 066 431 38 67</a>
                     <p class="tel-block__footer">Leave a request and our manager will contact you shortly</p>
                 </div>
                 <form action="/submit" @submit.prevent="sendForm" method="POST" class="contact-popup__contact-form contact-form">
@@ -512,11 +512,11 @@
                     <p class="owner-info__name">Pavlo Tsidulia</p>
                     <p class="owner-info__phone">
                         <span class="owner-info__post">Director</span>
-                        <a href="tel:+380966185013" class="owner-info__phone">
+                        <a href="tel:+380664313867" class="owner-info__phone">
                             <svg class="owner-info__phone-icn" width="16" height="16">
                                 <use xlink:href="img/sprite.svg#icn_Frame3"></use>
                             </svg>
-                            +38 096 618 50 13
+                            +38 066 431 38 67
                         </a>
                     </p>
                 </div>
