--- a/source/index-ua.html
+++ b/source/index-ua.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Базис-КР</title>
+    <link rel="preload" href="fonts/SFProDisplay-Regular.woff2   " as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/SFProDisplay-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/SFProDisplay-Semibold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="js/vue.min.js"></script>
-    <script src="js/swiper.min.js"></script>
 </head>
 <body id="app">
     <header id="navigation" class="header">
@@ -521,6 +522,9 @@
             </div>
         </div>
     </footer>
+    
+    <script src="js/vue.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     <script src="js/script.min.js"></script>
 </body>
 </html>
