--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
                 <a href="/" class="logo__link">
                     <picture>
                         <source type="image/webp" srcset="img/Logo1.png 1x, img/Logo1@2x.png 2x">
-                        <img src="img/Logo1.png" alt="Логотип Базис-КР" srcset="img/Logo1@2x.png 2x" width="138" height="56">
+                        <img loading="lazy"  src="img/Logo1.png" alt="Логотип Базис-КР" srcset="img/Logo1@2x.png 2x" width="138" height="56">
                     </picture>
                 </a>
             </div>
@@ -54,7 +54,7 @@
                     <div class="owner-info__avatar">
                         <picture>
                             <source type="image/webp" srcset="img/Ellipse1.webp 1x, img/Ellipse1@2x.webp 2x">
-                            <img src="img/Ellipse1.png" alt="Цидуля Павел Александрович" srcset="img/Ellipse1@2x.png 2x" width="56" height="56">
+                            <img loading="lazy"  src="img/Ellipse1.png" alt="Цидуля Павел Александрович" srcset="img/Ellipse1@2x.png 2x" width="56" height="56">
                         </picture>
                     </div>
                     <div class="owner-info__text">
@@ -237,7 +237,7 @@
                                         <source type="image/webp" srcset="img/brovary-mobile-5.webp 1x, img/brovary-mobile-5.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-5.jpeg 1x, img/brovary-5.jpeg 2x">
-                                        <img src="img/brovary-mobile-5.jpg" alt="Pd" srcset="img/brovary-mobile-5.jpg 2x">
+                                        <img loading="lazy"  src="img/brovary-mobile-5.jpg" alt="Pd" srcset="img/brovary-mobile-5.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
@@ -246,7 +246,7 @@
                                         <source type="image/webp" srcset="img/brovary-mobile-4.webp 1x, img/brovary-mobile-4.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-4.jpeg 1x, img/brovary-4.jpeg 2x">
-                                        <img src="img/brovary-mobile-4.jpg" alt="Pd" srcset="img/brovary-mobile-4.jpg 2x">
+                                        <img loading="lazy"  src="img/brovary-mobile-4.jpg" alt="Pd" srcset="img/brovary-mobile-4.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 
@@ -256,7 +256,7 @@
                                         <source type="image/webp" srcset="img/brovary-mobile.webp 1x, img/brovary-mobile.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary.webp 1x, img/brovary.webp 2x">
-                                        <img src="img/brovary-mobile.jpg" alt="Pd" srcset="img/brovary-mobile.jpg 2x">
+                                        <img loading="lazy"  src="img/brovary-mobile.jpg" alt="Pd" srcset="img/brovary-mobile.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
@@ -265,7 +265,7 @@
                                         <source type="image/webp" srcset="img/brovary-mobile-2.webp 1x, img/brovary-mobile-2.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-2.jpeg 1x, img/brovary-2.jpeg 2x">
-                                        <img src="img/brovary-mobile-2.jpg" alt="Pd" srcset="img/brovary-mobile-2.jpg 2x">
+                                        <img loading="lazy"  src="img/brovary-mobile-2.jpg" alt="Pd" srcset="img/brovary-mobile-2.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
@@ -274,7 +274,7 @@
                                         <source type="image/webp" srcset="img/brovary-mobile-3.webp 1x, img/brovary-mobile-3.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-3.jpeg 1x, img/brovary-3.jpeg 2x">
-                                        <img src="img/brovary-mobile-3.jpg" alt="Pd" srcset="img/brovary-mobile-3.jpg 2x">
+                                        <img loading="lazy"  src="img/brovary-mobile-3.jpg" alt="Pd" srcset="img/brovary-mobile-3.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 
@@ -297,7 +297,7 @@
                                         <source type="image/webp" srcset="img/school-mobile.webp 1x, img/school-mobile.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/school.jpg 1x, img/school.jpg 2x">
-                                        <img src="img/school-mobile.jpg" alt="Система вентиляции школы" srcset="img/school-mobile.jpg 2x">
+                                        <img loading="lazy"  src="img/school-mobile.jpg" alt="Система вентиляции школы" srcset="img/school-mobile.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                             </ul>
@@ -319,7 +319,7 @@
                                         <source type="image/webp" srcset="img/heating-mobile.webp 1x,img/heating-mobile.webp  2x">
 
                                         <source media="(min-width: 786px)" srcset="img/heating.jpg 1x, img/heating.jpg 2x">
-                                        <img src="img/heating-mobile.jpg" alt="Система отопления" srcset="img/heating-mobile.jpg 2x">
+                                        <img loading="lazy"  src="img/heating-mobile.jpg" alt="Система отопления" srcset="img/heating-mobile.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
@@ -328,7 +328,7 @@
                                         <source type="image/webp" srcset="img/heating-mobile-2.webp 1x,img/heating-mobile-2.webp  2x">
 
                                         <source media="(min-width: 786px)" srcset="img/heating-2.jpg 1x, img/heating-2.jpg 2x">
-                                        <img src="img/heating-mobile-2.jpg" alt="Система отопления" srcset="img/heating-mobile-2.jpg 2x">
+                                        <img loading="lazy"  src="img/heating-mobile-2.jpg" alt="Система отопления" srcset="img/heating-mobile-2.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
@@ -337,7 +337,7 @@
                                         <source type="image/webp" srcset="img/heating-mobile-3.webp 1x,img/heating-mobile-3.webp  2x">
 
                                         <source media="(min-width: 786px)" srcset="img/heating-3.jpg 1x, img/heating-3.jpg 2x">
-                                        <img src="img/heating-mobile-3.jpg" alt="Система отопления" srcset="img/heating-mobile-3.jpg 2x">
+                                        <img loading="lazy"  src="img/heating-mobile-3.jpg" alt="Система отопления" srcset="img/heating-mobile-3.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                             </ul>
@@ -359,7 +359,7 @@
                                         <source type="image/webp" srcset="img/gas-mobile.webp 1x, img/gas-mobile.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/gas.jpg 1x, img/gas.jpg 2x">
-                                        <img src="img/gas-mobile.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile.jpg 2x">
+                                        <img loading="lazy"  src="img/gas-mobile.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
@@ -368,7 +368,7 @@
                                         <source type="image/webp" srcset="img/gas-mobile-1.webp 1x, img/gas-mobile-1.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/gas-1.jpg 1x, img/gas-1.jpg 2x">
-                                        <img src="img/gas-mobile-1.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile-1.jpg 2x">
+                                        <img loading="lazy"  src="img/gas-mobile-1.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile-1.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
@@ -377,7 +377,7 @@
                                         <source type="image/webp" srcset="img/gas-mobile-2.webp 1x, img/gas-mobile-2.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/gas-2.jpg 1x, img/gas-2.jpg 2x">
-                                        <img src="img/gas-mobile-2.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile-2.jpg 2x">
+                                        <img loading="lazy"  src="img/gas-mobile-2.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile-2.jpg 2x" width="345" height="244">
                                     </picture>
                                 </li>
                             </ul>
@@ -456,7 +456,7 @@
                         </li>
                         <li class="reviews__item swiper-slide">
                             <blockquote class="reviews__review">
-                                <img src="img/photo_2021-02-20_16-37-08.jpg" alt="Подячна грамота">
+                                <img loading="lazy" src="img/photo_2021-02-20_16-37-08.jpg" alt="Подячна грамота" width="282" height="411">
                             </blockquote>
                             <cite class="reviews__author">Глава Саксаганскоког районного совета города Кривой Рог, В. Беззубченко</cite>
                         </li>
@@ -501,7 +501,7 @@
                 <div class="owner-info__avatar">
                     <picture>
                         <source type="image/webp" srcset="img/Ellipse1.webp 1x, img/Ellipse1@2x.webp 2x">
-                        <img src="img/Ellipse1.png" alt="Цидуля Павел Александрович" srcset="img/Ellipse1@2x.png 2x" width="56" height="56">
+                        <img loading="lazy"  src="img/Ellipse1.png" alt="Цидуля Павел Александрович" srcset="img/Ellipse1@2x.png 2x" width="56" height="56">
                     </picture>
                 </div>
                 <div class="owner-info__text">
