--- a/source/index-ua.html
+++ b/source/index-ua.html
@@ -401,6 +401,109 @@
                             <li class="project__item">Авторський нагляд за будівництвом</li>
                         </ul>
                     </li>
+                    <li class="ready-section__item project">
+                        <div class="project__img-container img-container containerFour">
+                            <ul class="img-container__list swiper-wrapper">
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_1.webp 1x, img/photo_1.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_1-mobile.webp 1x, img/photo_1-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_1.jpg 1x, img/photo_1.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_1-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_1-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_2.webp 1x, img/photo_2.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_2-mobile.webp 1x, img/photo_2-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_2.jpg 1x, img/photo_2.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_2-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_2-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_3.webp 1x, img/photo_3.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_3-mobile.webp 1x, img/photo_3-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_3.jpg 1x, img/photo_3.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_3-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_3-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_5.webp 1x, img/photo_5.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_5-mobile.webp 1x, img/photo_5-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_5.jpg 1x, img/photo_5.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_5-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_5-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_6.webp 1x, img/photo_6.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_6-mobile.webp 1x, img/photo_6-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_6.jpg 1x, img/photo_6.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_6-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_6-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_7.webp 1x, img/photo_7.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_7-mobile.webp 1x, img/photo_7-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_7.jpg 1x, img/photo_7.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_7-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_7-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_8.webp 1x, img/photo_8.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_8-mobile.webp 1x, img/photo_8-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_8.jpg 1x, img/photo_8.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_8-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_8-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_9.webp 1x, img/photo_9.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_9-mobile.webp 1x, img/photo_9-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_9.jpg 1x, img/photo_9.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_9-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_9-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_10.webp 1x, img/photo_10.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_10-mobile.webp 1x, img/photo_10-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_10.jpg 1x, img/photo_10.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_10-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_10-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/photo_11.webp 1x, img/photo_11.webp 2x">
+                                        <source type="image/webp" srcset="img/photo_11-mobile.webp 1x, img/photo_11-mobile.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/photo_11.jpg 1x, img/photo_11.jpg 2x">
+                                        <img loading="lazy"  src="img/photo_11-mobile.jpg" alt="Поставка газа в котельную" srcset="img/photo_11-mobile.jpg 2x" width="345" height="244">
+                                    </picture>
+                                </li>
+                            </ul>
+                            <div class="img-container__pag img-container__pag--four">
+                            </div>
+                        </div>
+                        <h3 class="project__title">Будівництво нової багатопаливної автозаправної станції на території ТОВ "Державний молочний завод"</h3>
+                        <ul class="project__features-list">
+                            <li class="project__item">Розробка и супровід проектної документації</li>
+                            <li class="project__item">Авторський нагляд за будівництвом</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </section>
