Removed photo and added new number of head engineer

--- a/source/index-en.html
+++ b/source/index-en.html
@@ -62,12 +62,20 @@
                     </li>
                 </ul>
                 <div class="owner-info">
-                    <div class="owner-info__avatar">
-                        <picture>
-                            <source type="image/webp" srcset="img/Ellipse1.webp 1x, img/Ellipse1@2x.webp 2x">
-                            <img loading="lazy"  src="img/Ellipse1.png" alt="Pavlo Tsidulia" srcset="img/Ellipse1@2x.png 2x" width="56" height="56">
-                        </picture>
+                    <div class="owner-info__text">
+                        <p class="owner-info__name">Inna Popova</p>
+                        <p class="owner-info__phone">
+                            <span class="owner-info__post">Head engineer</span>
+                            <a href="tel:+380677625828" class="owner-info__phone-link">
+                                <svg class="owner-info__phone-icn" width="16" height="16">
+                                    <use xlink:href="img/sprite.svg#icn_Frame-2"></use>
+                                </svg>
+                                +38 067 762 58 28
+                            </a>
+                        </p>
                     </div>
+                </div>
+                <div class="owner-info">
                     <div class="owner-info__text">
                         <p class="owner-info__name">Pavlo Tsidulia</p>
                         <p class="owner-info__phone">
