added new popover

--- a/source/index.html
+++ b/source/index.html
@@ -90,10 +90,18 @@
                     </div>
                 </div>
                 
-            </nav>  
+            </nav>
         </div>
     </header>
     <main class="main">
+        <div class="call-popover">
+           <div class="call-popover__wrapper">
+                <a href="tel:+380677625828" class="call-popover__link">Свяжитесь с нашими инженерами прямо сейчас</a>
+                <button class="call-popover__close">
+                    <span class="visually-hidden">Закрыть</span>
+                </button>
+           </div>
+        </div>
         <section class="main__section welcome-section" :class="{ 'main__section--hidden' : isFormPopup }">
             <div class="welcome-section__wrapper">
                 <h1 class="welcome-section__title title title--main">
